# app.py
@@ -29,7 +29,7 @@ def get_service(service_id):
     return service_info['Address'], service_info['Port']
 
 
-register_to_consul()
+# register_to_consul()
 
 
 def has_role(arg):
@@ -80,6 +80,16 @@ def create_user():
     }
 
 
+def delete_user():
+    user = db.session.query(User).filter_by(user_id=2).first()
+    db.session.delete(user)
+    db.session.commit()
+
+    return {
+        'user_id': user.user_id
+    }
+
+
 def create_product():
     product = Product(product_id=1, name="Skopsko", price=100.0, quantity=3, user_id=2)
     db.session.add(product)
@@ -87,7 +97,7 @@ def create_product():
 
 
 # @has_role(['shopping_cart', 'user', 'admin'])
-def add_product(user_id, product_id): #trebit user_id i status na inventory(nie im prakjame)
+def add_product(user_id, product_id):  # trebit user_id i status na inventory(nie im prakjame)
     cart = db.session.query(ShoppingCart).filter_by(user_id=user_id).first()
     product = db.session.query(Product).filter_by(product_id=product_id).first()
     product.user_id = cart.user_id
@@ -101,15 +111,11 @@ def add_product(user_id, product_id): #trebit user_id i status na inventory(nie 
 
 # @has_role(['shopping_cart', 'user', 'admin'])
 def remove_product(user_id, product_id):
-    carts = db.session.query(ShoppingCart).filter_by(user_id=user_id).all()
-    cart = None
-    for c in carts:
-        if c.product_id is None:
-            c.product_id = product_id
-            cart = c
-            break
+    cart = db.session.query(ShoppingCart).filter_by(user_id=user_id).first()
+    product = db.session.query(Product).filter_by(product_id=product_id).first()
+    product.user_id = None
 
-    db.session.delete(cart)
+    db.session.add(cart)
     db.session.commit()
 
     return {'user_id': user_id,
@@ -118,30 +124,30 @@ def remove_product(user_id, product_id):
 
 # @has_role(['shopping_cart', 'user', 'admin'])
 def list_all_products(user_id):
-    carts = db.session.query(ShoppingCart).filter_by(user_id=user_id).all()
-    products = []
-    for cart in carts:
-        product = db.session.query(Product).filter_by(product_id=cart.product_id).first()
-        products.append({
+    cart = db.session.query(ShoppingCart).filter_by(user_id=user_id).first()
+    products = db.session.query(Product).filter_by(product_id=cart.product_id).all()
+    productList = []
+    for product in products:
+        productList.append({
             'product_id': product.product_id,
             'name': product.name,
             'price': product.price,
-            'quantity': product.quantity,
+            'quantity': product.quantity
         })
-
-    return products
+    return productList
 
 
 # @has_role(['shopping_cart', 'user', 'admin'])
 def change_quantity(user_id, product_id, quantity):
     cart = db.session.query(ShoppingCart).filter_by(user_id=user_id).first()
-    product = None
-    for p in cart.products:
+    products = db.session.query(Product).filter_by(product_id=cart.product_id).all()
+    product = Product()
+    for p in products:
         if p.product_id == product_id:
-            p.quantity = quantity
             product = p
             break
 
+    product.quantity = quantity
     return {
         'product_id': product.product_id,
         'quantity': product.quantity
@@ -178,7 +184,7 @@ connexion_app.add_api("api.yml")
 
 from models import ShoppingCart, Product, Status, User
 
-register_to_consul()
+# register_to_consul()
 
 if __name__ == "__main__":
     connexion_app.run(host='0.0.0.0', port=5000, debug=True)
